--- a/train_test_validation.ipynb
+++ b/train_test_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b9bb0796-cc1e-469f-94f4-6544858a0242",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,7 @@
     "import shutil\n",
     "\n",
     "# Dossier contenant les fichiers d'entrée\n",
-    "input_folder = \"clips_sara\"  # Remplacez par le chemin de votre dossier\n",
+    "input_folder = \"clips\"  # Remplacez par le chemin de votre dossier\n",
     "\n",
     "# Dossiers de sortie\n",
     "output_train = \"train\"\n",
@@ -78,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
